--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -3,6 +3,8 @@
 Using `preload` so that page rendering doesn't get blocked.
 Fill in `href`. You may have to adjust `as` and `onload`/`rel`, depending on content.
 -->
+
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
 <link href="<path/to/content.css>" rel="preload" as="style" onload="this.rel='stylesheet'">
 
 <!--
