--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -127,3 +127,19 @@ input[type=checkbox]:checked~ul {
   // This line forces the browser to set the opacity to 1 after executing/finishing the animation
   opacity: 1;
 }
+
+
+@media screen and (max-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+  
+  .sidebar {
+    width: 100% !important;
+  }
+  
+  .content {
+    width: 100% !important;
+    padding: 1rem !important;
+  }
+}
